<?xml version="1.0"?>
<package format="2">
  <name>veranda_shape_plugins</name>
  <version>0.0.1</version>
  <description>Various Simple Shape plugins</description>

  <maintainer email="andrew.d.stelter@gmail.com">Andrew Stelter</maintainer>
  <maintainer email="samuelcwill@gmail.com">Sam Williams</maintainer>

  <license>TODO</license>

  <depend>veranda_api</depend>
  <depend>veranda_box2d</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
